import { PLATFORM_API_VERSION } from '@flowdular/contracts';
import {
	mkdir,
	mkdtemp,
	readdir,
	readFile,
	rm,
	writeFile,
} from 'node:fs/promises';
import { tmpdir } from 'node:os';
import { join, relative } from 'node:path';
import { describe, expect, it } from 'vitest';
import { loadWorkspaceFormatter } from '../src/format.ts';
import { scaffoldModule } from '../src/module-scaffold.ts';
import type { Workspace } from '../src/workspace.ts';

const specification = `schemaVersion: 1
id: inventory.core
specVersion: 0.1.0
status: approved
name: Inventory Core
description: Tracks tenant-owned stock for tests.
profile: full
capabilities:
  - api
  - database
  - client
  - translations
dependencies: []
tenancy: required
locales:
  - en
  - pl
invariants:
  - Every record belongs to one tenant.
permissions:
  - id: inventory.records.read
    description: Read inventory records.
  - id: inventory.records.manage
    description: Manage inventory records.
dataOwnership:
  - inventory.core owns inventory records.
acceptanceScenarios:
  - id: INVENTORY-LIST
    given: Inventory records exist.
    when: An authorized principal lists inventory.
    then: Only active tenant records are returned.
`;

const specPath = 'modules/inventory/spec/module.yaml';

async function workspace(): Promise<Workspace> {
	const root = await mkdtemp(join(tmpdir(), 'flowdular-scaffold-'));
	await mkdir(join(root, 'modules/inventory/spec'), { recursive: true });
	await writeFile(join(root, specPath), specification);
	await writeFile(join(root, 'flowdular.json'), '{}\n');
	return { root, configPath: join(root, 'flowdular.json'), config: {} };
}

async function listTree(
	directory: string,
	base = directory,
): Promise<string[]> {
	const files: string[] = [];
	for (const entry of await readdir(directory, { withFileTypes: true })) {
		const path = join(directory, entry.name);
		if (entry.isDirectory()) files.push(...(await listTree(path, base)));
		else files.push(relative(base, path));
	}
	return files.sort();
}

async function read(root: string, path: string): Promise<string> {
	return readFile(join(root, 'modules/inventory', path), 'utf8');
}

describe('module scaffolding', () => {
	it('produces a module the generated composition can import', async () => {
		const ws = await workspace();
		try {
			const result = await scaffoldModule(ws, {
				id: 'inventory.core',
				specPath,
				apply: true,
			});
			expect(result.skipped).toEqual([specPath]);

			const manifest = JSON.parse(await read(ws.root, 'module.json')) as {
				platform: unknown;
				version: string;
				platformApi: string;
			};
			expect(manifest.platform).toEqual({ server: true, client: true });
			expect(manifest.version).toBe('0.1.0');
			expect(manifest.platformApi).toBe(`^${PLATFORM_API_VERSION}`);

			const packageJson = JSON.parse(await read(ws.root, 'package.json')) as {
				exports: Record<string, string>;
				files: readonly string[];
				scripts: Record<string, string>;
				dependencies: Record<string, string>;
			};
			expect(packageJson.exports).toEqual({
				'.': './src/index.ts',
				'./client': './src/client/index.ts',
				'./server': './src/server/index.ts',
				'./platform': './src/platform.ts',
				'./module.json': './module.json',
			});
			expect(packageJson.files).toEqual([
				'src',
				'module.json',
				'migrations',
				'translations',
				'spec',
				'README.md',
			]);
			expect(packageJson.scripts.typecheck).toContain('tsrx-tsc');
			expect(packageJson.dependencies.octane).toBe('0.1.51');

			const tsconfig = JSON.parse(await read(ws.root, 'tsconfig.json')) as {
				compilerOptions: { types: string[] };
			};
			expect(tsconfig.compilerOptions.types).toEqual(['node']);

			const platform = await read(ws.root, 'src/platform.ts');
			expect(platform).toContain(
				'export function createServerComposition(\n\tcontext: PlatformServerContext,\n): PlatformServerComposition',
			);
			expect(platform).toContain("from '@flowdular/module-auth/server'");
			expect(platform).toContain(
				'createInventoryRoutes(context.auth, runtime)',
			);

			const client = await read(ws.root, 'src/client/index.ts');
			expect(client).toContain(
				'export function createClientContribution(\n\tcontext: ModuleClientContext,\n): ModuleClientContribution',
			);
			expect(client).toContain('csrfToken: context.csrfToken');
			const view = await read(ws.root, 'src/client/InventoryView.tsrx');
			expect(view).toContain('TableCard');
			expect(view).toContain("width: '65%'");
			expect(view).toContain("t('inventory.table.title')");
			expect(view).not.toContain('<table');
			const contribution = await read(ws.root, 'src/client/contribution.tsrx');
			expect(contribution).toContain(
				'translations: { en: translationsEn, pl: translationsPl }',
			);
			expect(contribution).toContain("return t('inventory.navigation.label')");

			expect(await read(ws.root, 'src/acl/permissions.ts')).toContain(
				"read: 'inventory.records.read'",
			);
			const endpoints = await read(ws.root, 'src/api/endpoints.ts');
			expect(endpoints).toContain("path: '/api/inventory/records'");
			expect(endpoints).toContain('INVENTORY_PERMISSIONS.read');
			expect(endpoints).toContain('sessionMutationDenial(octane, auth)');

			/* Schema work runs on the migrator role and is released before the
			   runtime lease, so a request never holds a schema owner. */
			const runtime = await read(ws.root, 'src/server/runtime.ts');
			expect(runtime).toContain("purpose: 'migration'");
			expect(runtime).toContain('migrateInventoryDatabase');
			expect(runtime).toContain('purpose: options.purpose');
			expect(runtime).toContain('DATABASE_DIALECT_IDS.postgresql');
			expect(platform).toContain('databases: context.databases');

			const migration = await read(ws.root, 'src/services/migration.ts');
			expect(migration).toContain('INVENTORY_MIGRATION_001');
			expect(migration).toContain('tenant_id TEXT NOT NULL');
			const upSql = await read(
				ws.root,
				'migrations/0001_inventory_core.up.sql',
			);
			expect(upSql).toContain('CREATE TABLE IF NOT EXISTS inventory_records');
			/* A tenant table the runtime role could read across tenants is the one
			   scaffold defect nothing downstream would catch. */
			expect(upSql).toContain(
				'ALTER TABLE inventory_records FORCE ROW LEVEL SECURITY;',
			);
			expect(upSql).toContain(
				"CREATE POLICY inventory_records_tenant_policy ON inventory_records\n  USING (tenant_id = current_setting('coreloom.tenant_id', true))\n  WITH CHECK (tenant_id = current_setting('coreloom.tenant_id', true));",
			);
			/* The runner checksums the constant, so it must equal the file. */
			expect(migration).toContain(
				`export const INVENTORY_MIGRATION_001 = \`${upSql}\`;`,
			);
			expect(migration).toContain(
				'sql: { postgresql: INVENTORY_MIGRATION_001 },',
			);
			expect(migration).toContain("'inventory_records_tenant_policy'");

			const repository = await read(
				ws.root,
				'src/services/database-repository.ts',
			);
			expect(repository).toContain('WHERE tenant_id = $1');
			expect(repository).toContain("{ access: 'read', tenantId }");
			expect(repository).toContain(
				"runDatabaseMigrations(database, 'inventory.core', databaseMigrations)",
			);
			expect(
				await read(ws.root, 'migrations/0001_inventory_core.down.sql'),
			).toContain('DROP TABLE IF EXISTS inventory_records');

			const en = JSON.parse(await read(ws.root, 'translations/en.json')) as {
				'module.name': string;
			};
			const pl = JSON.parse(await read(ws.root, 'translations/pl.json')) as {
				'module.name': string;
			};
			expect(en['module.name']).toBe('Inventory Core');
			expect(pl['module.name']).not.toBe(en['module.name']);
			expect(pl['module.name']).toMatch(/^Moduł /);

			const test = await read(ws.root, 'tests/module.test.ts');
			expect(test).toContain('createPgliteTestProvider()');
			expect(test).toContain('TRUNCATE inventory_records');
			expect(test).toContain("'tenant-a'");
			expect(test).toContain("'tenant-b'");
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});

	/* Every file below is generated from one field model shared with version 2
	   specifications. The snapshot is the guard that a version 1 module keeps
	   scaffolding exactly what it scaffolded before. */
	it('produces unchanged output for a version 1 specification', async () => {
		const ws = await workspace();
		try {
			await scaffoldModule(ws, { id: 'inventory.core', specPath, apply: true });
			for (const path of [
				'src/domain/types.ts',
				'src/services/inventory-service.ts',
				'src/services/database-repository.ts',
				'src/services/migration.ts',
				'migrations/0001_inventory_core.up.sql',
				'src/api/endpoints.ts',
				'src/client/InventoryView.tsrx',
				'tests/module.test.ts',
				'translations/en.json',
				'translations/pl.json',
			]) {
				expect(await read(ws.root, path)).toMatchSnapshot(path);
			}
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});

	it('writes files the workspace format gate accepts', async () => {
		const ws = await workspace();
		try {
			const result = await scaffoldModule(ws, {
				id: 'inventory.core',
				specPath,
				apply: true,
			});
			expect(result.formatted).toBe(true);
			const formatter = await loadWorkspaceFormatter(ws.root);
			expect(formatter).not.toBeNull();
			const moduleRoot = join(ws.root, 'modules/inventory');
			for (const path of await listTree(moduleRoot)) {
				const source = await readFile(join(moduleRoot, path), 'utf8');
				expect(
					await formatter!.format(join(moduleRoot, path), source),
					path,
				).toBe(source);
			}
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});

	it('keeps author-owned translations and reports them as skipped', async () => {
		const ws = await workspace();
		try {
			await mkdir(join(ws.root, 'modules/inventory/translations'), {
				recursive: true,
			});
			await writeFile(
				join(ws.root, 'modules/inventory/translations/pl.json'),
				'{\n\t"module.name": "Magazyn"\n}\n',
			);
			const result = await scaffoldModule(ws, {
				id: 'inventory.core',
				specPath,
				apply: true,
			});
			expect(result.skipped).toEqual([
				specPath,
				'modules/inventory/translations/pl.json',
			]);
			expect(await read(ws.root, 'translations/pl.json')).toContain('Magazyn');
			expect(await read(ws.root, 'translations/en.json')).toContain(
				'Inventory Core',
			);
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});

	it('refuses a directory that already holds module sources', async () => {
		const ws = await workspace();
		try {
			await mkdir(join(ws.root, 'modules/inventory/src'), { recursive: true });
			await writeFile(
				join(ws.root, 'modules/inventory/src/index.ts'),
				'export {};\n',
			);
			await expect(
				scaffoldModule(ws, { id: 'inventory.core', specPath, apply: false }),
			).rejects.toThrow('already exists');
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});

	it('leaves no partial output behind when a write fails midway', async () => {
		const ws = await workspace();
		const translations = join(ws.root, 'modules/inventory/translations');
		try {
			await mkdir(translations, { recursive: true });
			await writeFile(join(translations, 'pl.json'), '{}\n');
			// A directory at a planned file path rejects writes even as root in CI.
			const blockedFile = join(translations, 'en.json');
			await mkdir(blockedFile);
			await expect(
				scaffoldModule(ws, { id: 'inventory.core', specPath, apply: true }),
			).rejects.toMatchObject({ code: 'EEXIST' });
			expect(await listTree(join(ws.root, 'modules/inventory'))).toEqual([
				'spec/module.yaml',
				'translations/pl.json',
			]);

			expect(await read(ws.root, 'spec/module.yaml')).toBe(specification);
			expect(await read(ws.root, 'translations/pl.json')).toBe('{}\n');
			expect(await readdir(blockedFile)).toEqual([]);
			await rm(blockedFile, { recursive: true });
			const retry = await scaffoldModule(ws, {
				id: 'inventory.core',
				specPath,
				apply: true,
			});
			expect(retry.applied).toBe(true);
			expect(await listTree(join(ws.root, 'modules/inventory'))).toContain(
				'src/platform.ts',
			);
		} finally {
			await rm(ws.root, { recursive: true, force: true });
		}
	});
});
